--- a/jupyternotebooks/Activation_Functions.ipynb
+++ b/jupyternotebooks/Activation_Functions.ipynb
@@ -32,7 +32,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {
     "scrolled": true
    },
@@ -73,7 +73,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {
     "scrolled": true
    },
@@ -120,9 +120,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Downloading https://raw.githubusercontent.com/pjdunne/saved_models/main/tutorial3/FashionMNIST_elu.config...\n",
+      "Downloading https://raw.githubusercontent.com/pjdunne/saved_models/main/tutorial3/FashionMNIST_elu.tar...\n",
+      "Downloading https://raw.githubusercontent.com/pjdunne/saved_models/main/tutorial3/FashionMNIST_leakyrelu.config...\n",
+      "Downloading https://raw.githubusercontent.com/pjdunne/saved_models/main/tutorial3/FashionMNIST_leakyrelu.tar...\n",
+      "Downloading https://raw.githubusercontent.com/pjdunne/saved_models/main/tutorial3/FashionMNIST_relu.config...\n",
+      "Downloading https://raw.githubusercontent.com/pjdunne/saved_models/main/tutorial3/FashionMNIST_relu.tar...\n",
+      "Downloading https://raw.githubusercontent.com/pjdunne/saved_models/main/tutorial3/FashionMNIST_sigmoid.config...\n",
+      "Downloading https://raw.githubusercontent.com/pjdunne/saved_models/main/tutorial3/FashionMNIST_sigmoid.tar...\n",
+      "Downloading https://raw.githubusercontent.com/pjdunne/saved_models/main/tutorial3/FashionMNIST_swish.config...\n",
+      "Downloading https://raw.githubusercontent.com/pjdunne/saved_models/main/tutorial3/FashionMNIST_swish.tar...\n",
+      "Downloading https://raw.githubusercontent.com/pjdunne/saved_models/main/tutorial3/FashionMNIST_tanh.config...\n",
+      "Downloading https://raw.githubusercontent.com/pjdunne/saved_models/main/tutorial3/FashionMNIST_tanh.tar...\n"
+     ]
+    }
+   ],
    "source": [
     "import urllib.request\n",
     "from urllib.error import HTTPError\n",
@@ -169,7 +188,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 6,
    "metadata": {
     "scrolled": true
    },
@@ -196,33 +215,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 7,
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "SyntaxError",
-     "evalue": "invalid syntax (2488940349.py, line 6)",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;36m  Input \u001b[0;32mIn [5]\u001b[0;36m\u001b[0m\n\u001b[0;31m    return !!!!!!!!!!!\u001b[0m\n\u001b[0m           ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "##############################\n",
     "\n",
     "class Sigmoid(ActivationFunction):\n",
     "    \n",
     "    def forward(self, x):\n",
-    "        return !!!!!!!!!!!\n",
+    "        y = 1 / (1 + torch.exp(-x))\n",
+    "        return y\n",
     "\n",
     "##############################   \n",
     "    \n",
     "class Tanh(ActivationFunction):\n",
     "    \n",
     "    def forward(self, x):\n",
-    "        !!!!!!!\n",
-    "        return !!!!!!!!!!\n",
+    "        y = torch.tanh(x)\n",
+    "        return y\n",
     "    \n",
     "##############################"
    ]
@@ -262,7 +273,8 @@
     "class ReLU(ActivationFunction):\n",
     "    \n",
     "    def forward(self, x):\n",
-    "        return !!!!!!!!!!!\n",
+    "        y = torch.where(x>0,x,0)\n",
+    "        return y\n",
     "\n",
     "##############################\n",
     "\n",
@@ -273,21 +285,24 @@
     "        self.config[\"alpha\"] = alpha\n",
     "        \n",
     "    def forward(self, x):\n",
-    "        return !!!!!!!!!!!!!!!\n",
+    "        y = torch.where(x>0,x,self.config[\"alpha\"]*x)\n",
+    "        return y\n",
     "\n",
     "##############################\n",
     "    \n",
     "class ELU(ActivationFunction):\n",
     "    \n",
     "    def forward(self, x):\n",
-    "        return !!!!!!!!!!!!!!!!!\n",
+    "        y = torch.where(x>0,x,torch.exp(x)-1)\n",
+    "        return y\n",
     "\n",
     "##############################\n",
     "    \n",
     "class Swish(ActivationFunction):\n",
     "    \n",
     "    def forward(self, x):\n",
-    "        return !!!!!!!!!!!!!!!!!!!\n",
+    "        y = x * torch.sigmoid(x)\n",
+    "        return y\n",
     "    \n",
     "##############################"
    ]
@@ -381,13 +396,18 @@
    "source": [
     "def vis_act_fn(act_fn, ax, x):\n",
     "    # Run activation function and get gradients\n",
-    "    !!!!!!!!!!!!!!!\n",
+    "    grad = get_grads(act_fn,x)\n",
     "    \n",
     "    # Push x, y and gradients back to cpu for plotting\n",
-    "    !!!!!!!!!!!!!!!\n",
-    "    ## Plotting\n",
-    "    !!!!!!!!!!!!!!!\n",
+    "    y_pred = act_fn(x)\n",
+    "    ax.plot(x, y_pred,label = \"function\")\n",
+    "    ax.plot(x, grad, label = \"gradient\")\n",
+    "    ax.legend()\n",
+    "    ax.set_title(act_fn.name)\n",
     "    \n",
+    "    ## Plotting\n",
+    "    \n",
+    "    return\n",
     "    \n",
     "    \n",
     "# Add activation functions if wanted\n",
@@ -452,8 +472,13 @@
     "        super().__init__()\n",
     "        \n",
     "        # Create the network based on the specified hidden sizes\n",
-    "        !!!!!!!!!!!        \n",
-    "        \n",
+    "        layer_sizes = [input_size] + hidden_sizes\n",
+    "        modules = []\n",
+    "        for i in range(len(layer_sizes)-1):\n",
+    "            modules.append(nn.Linear(layer_sizes[i], layer_sizes[i+1]))\n",
+    "            modules.append(act_fn)\n",
+    "        modules.append(nn.Linear(layer_sizes[-1], num_classes))\n",
+    "        self.layers = nn.Sequential(*modules)\n",
     "        \n",
     "        # We store all hyperparameters in a dictionary for saving and loading of the model\n",
     "        self.config = {\"act_fn\": act_fn.config, \"input_size\": input_size, \"num_classes\": num_classes, \"hidden_sizes\": hidden_sizes} \n",
@@ -591,7 +616,15 @@
    "source": [
     "exmp_imgs = [train_set[i][0] for i in range(16)]\n",
     "# Organize the images into a grid for nicer visualization and plot them\n",
-    "!!!!!!!!!!!!!!!!!!!"
+    "img_grid = torchvision.utils.make_grid(torch.stack(exmp_imgs, dim=0), nrow=4, normalize=True, pad_value=0.5)\n",
+    "img_grid = img_grid.permute(1, 2, 0)\n",
+    "\n",
+    "plt.figure(figsize=(8,8))\n",
+    "plt.title(\"FashionMNIST examples\")\n",
+    "plt.imshow(img_grid)\n",
+    "plt.axis('off')\n",
+    "plt.show()\n",
+    "plt.close()"
    ]
   },
   {
@@ -627,7 +660,10 @@
     "    imgs, labels = imgs.to(device), labels.to(device)\n",
     "    \n",
     "    # Pass one batch through the network, and calculate the gradients for the weights\n",
-    "    !!!!!!!!!!!!!!!!!!!\n",
+    "    net.zero_grad()\n",
+    "    preds = net(imgs)\n",
+    "    loss = F.cross_entropy(preds,labels)\n",
+    "    loss.backward()\n",
     "    \n",
     "    # We limit our visualization to the weight parameters and exclude the bias to reduce the number of plots\n",
     "    grads = {name: params.grad.data.view(-1).cpu().clone().numpy() for name, params in net.named_parameters() if \"weight\" in name}\n",
@@ -743,10 +779,10 @@
     "            for imgs, labels in tqdm(train_loader_local, desc=f\"Epoch {epoch+1}\", leave=False):\n",
     "                imgs, labels = imgs.to(device), labels.to(device) # To GPU if we have one\n",
     "                optimizer.zero_grad() # Zero-grad can be placed anywhere before \"loss.backward()\"\n",
-    "                \n",
-    "                \n",
-    "                !!!!!!!!FILL IN THE TRAINING LOOP\n",
-    "                \n",
+    "                preds = net(imgs)\n",
+    "                loss = loss_module(preds, labels)\n",
+    "                loss.backward()\n",
+    "                optimizer.step()\n",
     "                # Record statistics during training\n",
     "                true_preds += (preds.argmax(dim=-1) == labels).sum()\n",
     "                count += labels.shape[0]\n",
@@ -768,7 +804,12 @@
     "                break\n",
     "\n",
     "        # Plot a curve of the validation accuracy\n",
-    "        !!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!\n",
+    "        plt.plot([i for i in range(1,len(val_scores)+1)], val_scores)\n",
+    "        plt.xlabel(\"Epochs\")\n",
+    "        plt.ylabel(\"Validation accuracy\")\n",
+    "        plt.title(f\"Validation performance of {model_name}\")\n",
+    "        plt.show()\n",
+    "        plt.close()\n",
     "    \n",
     "    load_model(CHECKPOINT_PATH, model_name, net=net)\n",
     "    test_acc = test_model(net, test_loader)\n",
@@ -789,7 +830,10 @@
     "    for imgs, labels in data_loader:\n",
     "        imgs, labels = imgs.to(device), labels.to(device)\n",
     "        with torch.no_grad():\n",
-    "            !!!!!!!!!!!!WRITE THE TEST FUNCTION\n",
+    "            preds = net(imgs).argmax(dim=-1)\n",
+    "            true_preds += (preds == labels).sum().item()\n",
+    "            count += labels.shape[0]\n",
+    "    test_acc = true_preds / count\n",
     "    return test_acc "
    ]
   },
@@ -1132,7 +1176,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python 3.10.6 ('MLBD-MRes')",
    "language": "python",
    "name": "python3"
   },
@@ -1146,7 +1190,12 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.12"
+   "version": "3.10.6"
+  },
+  "vscode": {
+   "interpreter": {
+    "hash": "7776e28bab76a5fadd8a78fa5594b82d0e71ff2d5653932e037d88b496ace1c1"
+   }
   }
  },
  "nbformat": 4,
