Finished most of the work

--- a/jupyternotebooks/CNNs.ipynb
+++ b/jupyternotebooks/CNNs.ipynb
@@ -703,7 +703,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 67,
    "metadata": {},
    "outputs": [
     {
@@ -745,23 +745,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 154,
+   "execution_count": 73,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Accuracy for class: plane is 55.6 %\n",
-      "Accuracy for class: car   is 78.7 %\n",
-      "Accuracy for class: bird  is 44.6 %\n",
-      "Accuracy for class: cat   is 36.3 %\n",
-      "Accuracy for class: deer  is 33.0 %\n",
-      "Accuracy for class: dog   is 36.1 %\n",
-      "Accuracy for class: frog  is 70.6 %\n",
-      "Accuracy for class: horse is 70.4 %\n",
-      "Accuracy for class: ship  is 73.5 %\n",
-      "Accuracy for class: truck is 57.1 %\n"
+      "Accuracy for class: plane is 56.5 %\n",
+      "Accuracy for class: car   is 81.0 %\n",
+      "Accuracy for class: bird  is 27.7 %\n",
+      "Accuracy for class: cat   is 46.4 %\n",
+      "Accuracy for class: deer  is 31.5 %\n",
+      "Accuracy for class: dog   is 32.6 %\n",
+      "Accuracy for class: frog  is 75.9 %\n",
+      "Accuracy for class: horse is 55.9 %\n",
+      "Accuracy for class: ship  is 59.7 %\n",
+      "Accuracy for class: truck is 59.5 %\n"
      ]
     }
    ],
@@ -771,12 +771,19 @@
     "total_pred = {classname: 0 for classname in classes}\n",
     "\n",
     "# again no gradients needed\n",
-    "!!!!!!!!!!!!!!!\n",
+    "with torch.no_grad():\n",
     "    for data in testloader:\n",
-    "        !!!!!!!!!!!!!!!!!!!!!!!\n",
+    "        inputs, labels = data\n",
+    "        outputs = net(inputs)\n",
+    "        _, predictions = torch.max(outputs,1)\n",
     "        # collect the correct predictions for each class\n",
     "        for label, prediction in zip(labels, predictions):\n",
-    "            !!!!!!!!!!!!!!!!!!!!!!!!!\n",
+    "            #print(label, prediction)\n",
+    "            total_pred[classes[label]] += 1\n",
+    "            if label == prediction:\n",
+    "                correct_pred[classes[label]] += 1\n",
+    "            else:\n",
+    "                continue\n",
     "\n",
     "# print accuracy for each class\n",
     "for classname, correct_count in correct_pred.items():\n",
@@ -821,7 +828,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 81,
    "metadata": {},
    "outputs": [
     {
