--- a/jupyternotebooks/CNNs.ipynb
+++ b/jupyternotebooks/CNNs.ipynb
@@ -89,7 +89,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
@@ -97,6 +97,19 @@
      "output_type": "stream",
      "text": [
       "Files already downloaded and verified\n"
+     ]
+    },
+    {
+     "ename": "ValueError",
+     "evalue": "num_samples should be a positive integer value, but got num_samples=0",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mValueError\u001b[0m                                Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn [25], line 20\u001b[0m\n\u001b[1;32m     14\u001b[0m transform \u001b[39m=\u001b[39m transforms\u001b[39m.\u001b[39mCompose(\n\u001b[1;32m     15\u001b[0m     [transforms\u001b[39m.\u001b[39mToTensor(),\n\u001b[1;32m     16\u001b[0m      transforms\u001b[39m.\u001b[39mNormalize((\u001b[39m0.5\u001b[39m, \u001b[39m0.5\u001b[39m, \u001b[39m0.5\u001b[39m), (\u001b[39m0.5\u001b[39m, \u001b[39m0.5\u001b[39m, \u001b[39m0.5\u001b[39m))])\n\u001b[1;32m     18\u001b[0m kerneltestset \u001b[39m=\u001b[39m torchvision\u001b[39m.\u001b[39mdatasets\u001b[39m.\u001b[39mCaltech101(root\u001b[39m=\u001b[39m\u001b[39m'\u001b[39m\u001b[39m./data\u001b[39m\u001b[39m'\u001b[39m, \n\u001b[1;32m     19\u001b[0m                                         download\u001b[39m=\u001b[39m\u001b[39mTrue\u001b[39;00m, transform\u001b[39m=\u001b[39mtransform)\n\u001b[0;32m---> 20\u001b[0m kerneltestloader \u001b[39m=\u001b[39m torch\u001b[39m.\u001b[39;49mutils\u001b[39m.\u001b[39;49mdata\u001b[39m.\u001b[39;49mDataLoader(kerneltestset, batch_size\u001b[39m=\u001b[39;49m\u001b[39m1\u001b[39;49m,\n\u001b[1;32m     21\u001b[0m                                           shuffle\u001b[39m=\u001b[39;49m\u001b[39mTrue\u001b[39;49;00m, num_workers\u001b[39m=\u001b[39;49m\u001b[39m2\u001b[39;49m)\n\u001b[1;32m     23\u001b[0m kerneltestiter \u001b[39m=\u001b[39m \u001b[39miter\u001b[39m(kerneltestloader)\n\u001b[1;32m     24\u001b[0m images, labels \u001b[39m=\u001b[39m \u001b[39mnext\u001b[39m(kerneltestiter)\n",
+      "File \u001b[0;32m~/anaconda3/envs/MLBD-MRes/lib/python3.10/site-packages/torch/utils/data/dataloader.py:344\u001b[0m, in \u001b[0;36mDataLoader.__init__\u001b[0;34m(self, dataset, batch_size, shuffle, sampler, batch_sampler, num_workers, collate_fn, pin_memory, drop_last, timeout, worker_init_fn, multiprocessing_context, generator, prefetch_factor, persistent_workers, pin_memory_device)\u001b[0m\n\u001b[1;32m    342\u001b[0m \u001b[39melse\u001b[39;00m:  \u001b[39m# map-style\u001b[39;00m\n\u001b[1;32m    343\u001b[0m     \u001b[39mif\u001b[39;00m shuffle:\n\u001b[0;32m--> 344\u001b[0m         sampler \u001b[39m=\u001b[39m RandomSampler(dataset, generator\u001b[39m=\u001b[39;49mgenerator)  \u001b[39m# type: ignore[arg-type]\u001b[39;00m\n\u001b[1;32m    345\u001b[0m     \u001b[39melse\u001b[39;00m:\n\u001b[1;32m    346\u001b[0m         sampler \u001b[39m=\u001b[39m SequentialSampler(dataset)  \u001b[39m# type: ignore[arg-type]\u001b[39;00m\n",
+      "File \u001b[0;32m~/anaconda3/envs/MLBD-MRes/lib/python3.10/site-packages/torch/utils/data/sampler.py:107\u001b[0m, in \u001b[0;36mRandomSampler.__init__\u001b[0;34m(self, data_source, replacement, num_samples, generator)\u001b[0m\n\u001b[1;32m    103\u001b[0m     \u001b[39mraise\u001b[39;00m \u001b[39mTypeError\u001b[39;00m(\u001b[39m\"\u001b[39m\u001b[39mreplacement should be a boolean value, but got \u001b[39m\u001b[39m\"\u001b[39m\n\u001b[1;32m    104\u001b[0m                     \u001b[39m\"\u001b[39m\u001b[39mreplacement=\u001b[39m\u001b[39m{}\u001b[39;00m\u001b[39m\"\u001b[39m\u001b[39m.\u001b[39mformat(\u001b[39mself\u001b[39m\u001b[39m.\u001b[39mreplacement))\n\u001b[1;32m    106\u001b[0m \u001b[39mif\u001b[39;00m \u001b[39mnot\u001b[39;00m \u001b[39misinstance\u001b[39m(\u001b[39mself\u001b[39m\u001b[39m.\u001b[39mnum_samples, \u001b[39mint\u001b[39m) \u001b[39mor\u001b[39;00m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39mnum_samples \u001b[39m<\u001b[39m\u001b[39m=\u001b[39m \u001b[39m0\u001b[39m:\n\u001b[0;32m--> 107\u001b[0m     \u001b[39mraise\u001b[39;00m \u001b[39mValueError\u001b[39;00m(\u001b[39m\"\u001b[39m\u001b[39mnum_samples should be a positive integer \u001b[39m\u001b[39m\"\u001b[39m\n\u001b[1;32m    108\u001b[0m                      \u001b[39m\"\u001b[39m\u001b[39mvalue, but got num_samples=\u001b[39m\u001b[39m{}\u001b[39;00m\u001b[39m\"\u001b[39m\u001b[39m.\u001b[39mformat(\u001b[39mself\u001b[39m\u001b[39m.\u001b[39mnum_samples))\n",
+      "\u001b[0;31mValueError\u001b[0m: num_samples should be a positive integer value, but got num_samples=0"
      ]
     }
    ],
@@ -891,6 +904,117 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Test out the Max Pool 2d function\n",
+    "import torch\n",
+    "import torch.nn as nn\n",
+    "import torch.functional as F\n",
+    "torch.seed = 42"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "tensor([[[ 0.9394, -1.1864, -1.2398,  0.0263, -1.6186,  0.2625],\n",
+      "         [-0.5524, -0.6007,  0.2513, -0.2901,  0.7931,  2.1639],\n",
+      "         [-0.9775,  0.8996, -1.1926,  0.9403, -1.6916,  0.1069],\n",
+      "         [ 1.9236, -1.3121,  0.8161,  0.0476,  0.7450,  0.7613],\n",
+      "         [ 0.6338,  0.4496, -0.7159, -0.8349, -0.1526, -1.5309],\n",
+      "         [-0.2238, -0.6130, -1.0174,  1.6007, -0.4503,  1.2022]],\n",
+      "\n",
+      "        [[-0.1785, -1.6879, -0.7181, -1.0078,  1.2786,  1.1300],\n",
+      "         [-0.9436,  1.9241, -0.1130,  0.1365,  0.6710, -0.7793],\n",
+      "         [-0.8349, -0.5861, -0.7990, -2.7067, -0.8218,  0.2534],\n",
+      "         [-1.9663,  1.2154,  1.5106,  0.5164, -1.3484, -1.2833],\n",
+      "         [ 1.4964, -0.0798,  0.8886,  0.5143, -0.1612,  0.2797],\n",
+      "         [-0.1527, -0.0430,  1.1917,  0.3713, -0.2257, -2.1805]],\n",
+      "\n",
+      "        [[ 2.3165,  1.3338,  0.0157,  0.6429, -0.4428,  1.2353],\n",
+      "         [-2.0142, -0.5133,  0.1326, -0.3350, -0.8136,  0.0426],\n",
+      "         [-0.4718,  0.4457,  0.6084,  0.7514,  0.8278,  1.2442],\n",
+      "         [ 1.0741,  0.1754, -0.2418, -1.0663,  0.0277,  0.6700],\n",
+      "         [ 2.2096, -1.3459, -1.5491, -1.6446,  0.6399,  0.5002],\n",
+      "         [-1.2596, -1.0336,  2.0186,  0.4903,  0.9721, -1.0517]]])\n"
+     ]
+    }
+   ],
+   "source": [
+    "test_input = torch.randn(3,6,6)\n",
+    "print(test_input)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 57,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "Conv = nn.Conv2d(3,2,2)\n",
+    "Pool = nn.MaxPool2d(2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 58,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "tensor([[[ 0.5950,  0.3535, -0.1973,  0.6405,  0.2118],\n",
+      "         [-0.0786, -0.1749,  0.1843, -0.3250, -1.1079],\n",
+      "         [-0.6597,  0.0907,  0.0508,  1.3413, -0.0592],\n",
+      "         [ 1.1770,  0.2612,  0.7917, -0.0527, -0.1859],\n",
+      "         [ 0.7908, -0.2588, -0.8279, -0.1704,  0.7127]],\n",
+      "\n",
+      "        [[ 0.8989, -1.1415, -0.6326, -0.5374, -0.3452],\n",
+      "         [ 0.1756, -0.0582, -0.2320, -0.3454,  1.1787],\n",
+      "         [-0.5676,  0.4509, -0.9134, -0.6057, -0.9939],\n",
+      "         [-1.6918, -0.5275,  0.3967,  0.9964, -0.1583],\n",
+      "         [-0.1134,  1.0893,  0.0486, -0.2160, -1.0322]]],\n",
+      "       grad_fn=<SqueezeBackward1>)\n"
+     ]
+    }
+   ],
+   "source": [
+    "C1 = Conv(test_input)\n",
+    "print(C1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 59,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "tensor([[[ 0.5950,  0.6405],\n",
+      "         [ 1.1770,  1.3413]],\n",
+      "\n",
+      "        [[ 0.8989, -0.2320],\n",
+      "         [ 0.4509,  0.9964]]], grad_fn=<MaxPool2DWithIndicesBackward0>)\n"
+     ]
+    }
+   ],
+   "source": [
+    "P1 = Pool(C1)\n",
+    "print(P1)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
@@ -899,7 +1023,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3.10.8 ('MLBD-MRes')",
+   "display_name": "Python 3.10.6 ('MLBD-MRes')",
    "language": "python",
    "name": "python3"
   },
@@ -913,11 +1037,11 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.8"
+   "version": "3.10.6"
   },
   "vscode": {
    "interpreter": {
-    "hash": "cfc40d0cf2a22fc4c0edfc47f881f59c5644c9c55eee201298833cac676559cd"
+    "hash": "7776e28bab76a5fadd8a78fa5594b82d0e71ff2d5653932e037d88b496ace1c1"
    }
   }
  },
